--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -80,7 +80,7 @@ h1 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
+  /* color: inherit; */
 
   font-weight: bold;
   text-rendering: optimizeLegibility;
